fix: fixed a padding issue with the promo that caused a line wrap in desktop

--- a/app/scss/_layout.scss
+++ b/app/scss/_layout.scss
@@ -51,7 +51,7 @@
 
 .promo {
   margin-top: rem(64px);
-  padding: rem(18px) 20.34%;
+  padding: rem(18px) 20%;
 }
 
 .register {
